fix: fix missing spaces while using links in headlines (#224)

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -104,8 +104,6 @@ h4,
 h5,
 h6 {
   font-weight: 600;
-  display: flex;
-  align-items: center;
 }
 
 h4,
